--- a/testsite/templates/testsite/questions_list.html
+++ b/testsite/templates/testsite/questions_list.html
@@ -12,7 +12,7 @@ TEST :: {{ block.super}}
 {% block content %}
 
 <div class="col-6"  style="overflow: auto; height: 400px ">
-{% for item in question %}
+{% for item in questions %}
 {{ item.question_text }} 
 <br>
     <br>
