--- a/testsite/templates/testsite/questions_list.html
+++ b/testsite/templates/testsite/questions_list.html
@@ -12,29 +12,33 @@ TEST :: {{ block.super}}
 {% block content %}
 
 <div class="col-9"  style="overflow: auto; height: 400px; ml-auto ">
-{% if questions %}
-    {% for item in questions %}
-{{ item.question_text }} 
+
+
+{% for key, value in questions.items %}
+
+{% for item in value %}
+{{ item.question_text }}
 <br>
     <br>
         
-        <input class="form-check-input" type="radio" name=" {{ item.question_text  }} " id="radioNoLabel1" value="" aria-label="">
+        <input class="form-check-input" type="radio" name=" {{ item.question_text }} " id="radioNoLabel1" value="" aria-label="">
         <label class="form-check-label" for="inlineRadio1">A) {{ item.a }} </label>
         <br>
-        <input class="form-check-input" type="radio" name=" {{ item.question_text  }} " id="radioNoLabel1" value="b" aria-label="b)">
+        <input class="form-check-input" type="radio" name=" {{ item.question_text }} " id="radioNoLabel1" value="b" aria-label="b)">
         <label class="form-check-label" for="inlineRadio1">B) {{ item.b }} </label>
         <br>
         
-        <input class="form-check-input" type="radio" name=" {{ item.question_text  }} " id="radioNoLabel1" value="c" aria-label="c)">
+        <input class="form-check-input" type="radio" name=" {{ item.question_text }} " id="radioNoLabel1" value="c" aria-label="c)">
         <label class="form-check-label" for="inlineRadio1">C) {{ item.c }} </label>
         <br>
         
-        <input class="form-check-input" type="radio" name=" {{ item.question_text  }} " id="radioNoLabel1" value="d" aria-label="d)">
+        <input class="form-check-input" type="radio" name=" {{ item.question_text }} " id="radioNoLabel1" value="d" aria-label="d)">
         <label class="form-check-label" for="inlineRadio1">D) {{ item.d }} </label>
         <br>
         <br>
-{% endfor  %}
-<br>
-{% endif %}
+
+{% endfor %}
+
+{% endfor %}
 </div>
 {% endblock  %}
