--- a/quiz/templates/quiz/quiz.html
+++ b/quiz/templates/quiz/quiz.html
@@ -1,8 +1,12 @@
 {% extends 'quiz/base.html' %}
 
 {% block css %}
-    <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
-    <link href="https://storage.googleapis.com/chydlx/plugins/dlx-quiz/css/main.css" rel="stylesheet">
+
+{% load static %}
+
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/normalize.css' %}" rel="stylesheet">
+    <link href="{% static 'css/main.css' %}" rel="stylesheet">
     <style>
         img {
             max-width: 100%;
@@ -17,7 +21,7 @@
 
         #quiz1 {
           width: 560px;
-          background: #fff;
+          background: rgb(245, 245, 245);
           padding: 2rem;
           border-radius: 3px;
         }
@@ -40,6 +44,7 @@
 
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="{% static 'bootstrap/js/main.js' %}"></script>
+
     <script>
 $("#quiz1").dlxQuiz({
     quizData: {{ quiz_data }}
